apps/base/echo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
spec:
  parentRefs:
    - name: default-gateway
  hostnames:
    - echo.isning.moe
  rules:
    - backendRefs:
      - name: echo
        port: 8080
